Add scaffold for map locations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
           <%= link_to "Distribuidora", root_path, id: "logo" %>
           <nav>
             <ul class="nav pull-right">
-              <li><%= link_to "Criar mapa", '#' %></li>
+              <li><%= link_to "Criar mapa", map_locations_path %></li>
               <li><%= link_to "Melhor caminho", '#' %></li>
             </ul>
           </nav>
