Translate map location pages

--- a/app/views/map_locations/show.html.erb
+++ b/app/views/map_locations/show.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Nome:</strong>
   <%= @map_location.name %>
 </p>
 
 <p>
-  <strong>Road info:</strong>
+  <strong>Rota:</strong>
   <%= @map_location.road_info %>
 </p>
 
-<%= link_to 'Edit', edit_map_location_path(@map_location) %> |
-<%= link_to 'Back', map_locations_path %>
+<%= link_to 'Editar', edit_map_location_path(@map_location) %> |
+<%= link_to 'Voltar', map_locations_path %>
