--- a/app/views/map_locations/edit.html.erb
+++ b/app/views/map_locations/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing map_location</h1>
+<h1>Editando rotas</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @map_location %> |
-<%= link_to 'Back', map_locations_path %>
+<%= link_to 'Mostrar', @map_location %> |
+<%= link_to 'Voltar', map_locations_path %>
