--- a/app/views/map_locations/index.html.erb
+++ b/app/views/map_locations/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing map_locations</h1>
+<h1>Listando mapas</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Road info</th>
+      <th>Nome</th>
+      <th>Rota</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,9 +14,9 @@
       <tr>
         <td><%= map_location.name %></td>
         <td><%= map_location.road_info %></td>
-        <td><%= link_to 'Show', map_location %></td>
-        <td><%= link_to 'Edit', edit_map_location_path(map_location) %></td>
-        <td><%= link_to 'Destroy', map_location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Mostrar', map_location %></td>
+        <td><%= link_to 'Editar', edit_map_location_path(map_location) %></td>
+        <td><%= link_to 'Apagar', map_location, method: :delete, data: { confirm: 'Tem certeza?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Map location', new_map_location_path %>
+<%= link_to 'Novo mapa', new_map_location_path %>
