--- a/app/views/map_locations/new.html.erb
+++ b/app/views/map_locations/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New map_location</h1>
+<h1>Novo mapa</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', map_locations_path %>
+<%= link_to 'Voltar', map_locations_path %>
