Change road info filed for a text type

--- a/app/views/map_locations/_form.html.erb
+++ b/app/views/map_locations/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :road_info %><br>
-    <%= f.text_field :road_info %>
+    <%= f.text_area :road_info %>
   </div>
   <div class="actions">
     <%= f.submit %>
