Add some information to how fill this road info field

--- a/app/views/map_locations/_form.html.erb
+++ b/app/views/map_locations/_form.html.erb
@@ -16,6 +16,7 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
+    <small>Adicionar as rotas sepaaradas por virgula. ex: A B 10, B D 15</small>
     <%= f.label :road_info %><br>
     <%= f.text_area :road_info %>
   </div>
