Add search best road feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
           <nav>
             <ul class="nav pull-right">
               <li><%= link_to "Criar mapa", map_locations_path %></li>
-              <li><%= link_to "Melhor caminho", '#' %></li>
+              <li><%= link_to "Melhor caminho", roads_path %></li>
             </ul>
           </nav>
         </div>
