Better apresentation of map location html

--- a/app/views/map_locations/_form.html.erb
+++ b/app/views/map_locations/_form.html.erb
@@ -20,7 +20,7 @@
         <%= f.text_field :name, :class => "string required form-control" %>
       </div>
       <div class="field">
-        <small>Adicionar as rotas sepaaradas por virgula. ex: A B 10, B D 15</small>
+        <small>Adicionar as rotas sepaaradas por virgula e os pontos por espaço. ex: A B 10, B D 15</small>
         </br>
         <%= f.label :road_info %><br>
         <%= f.text_area :road_info, :class => "text required form-control" %>
