--- a/app/views/map_locations/edit.html.erb
+++ b/app/views/map_locations/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Editando rotas</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Mostrar', @map_location %> |
-<%= link_to 'Voltar', map_locations_path %>
+<ul class="nav nav-pills">
+  <li><%= link_to 'Mostrar', @map_location %></li>
+  <li><%= link_to 'Voltar', map_locations_path %></li>
+</ul
