--- a/app/views/map_locations/index.html.erb
+++ b/app/views/map_locations/index.html.erb
@@ -24,4 +24,8 @@
 
 <br>
 
-<%= link_to 'Novo mapa', new_map_location_path %>
+<ul class="nav nav-pills">
+  <li>
+    <%= link_to 'Novo mapa', new_map_location_path %>
+  </li>
+</ul
