--- a/app/views/map_locations/new.html.erb
+++ b/app/views/map_locations/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Novo mapa</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Voltar', map_locations_path %>
+<ul class="nav nav-pills">
+  <li><%= link_to 'Voltar', map_locations_path %></li>
+</ul
