--- a/app/views/roads/show.html.erb
+++ b/app/views/roads/show.html.erb
@@ -1,25 +1,42 @@
 <h1>Escolha sua origem e destino</h1>
 
-<br />
-<h2><%= @map.name %></h2>
-<br />
-<%= form_tag(roads_path) do%>
-  <%= hidden_field_tag "id" , @map.id %>
-  <%= label_tag "Ponto inicial" %>
-  <%= text_field_tag "origin" %>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h2><%= @map.name %></h2>
+  </div>
+  <div class="panel-body">
+    <%= form_tag(roads_path, class: "form-horizontal", role: "form", id: "road_form") do%>
+      <%= hidden_field_tag "id" , @map.id %>
+      <div class="form-group">
+        <%= label_tag "Origem", nil, class: "col-sm-2 control-label" %>
+        <div class="col-sm-10">
+          <%= text_field_tag "origin", nil, class: "form-control" %>
+        </div>
+      </div>
 
-  <br />
-  <%= label_tag "Ponto final" %>
-  <%= text_field_tag "destiny" %>
+      <div class="form-group">
+        <%= label_tag "Destino", nil, class: "col-sm-2 control-label" %>
+        <div class="col-sm-10">
+          <%= text_field_tag "destiny", nil, class: "form-control" %>
+        </div>
+      </div>
 
-  <br />
-  <%= label_tag "Autonomia" %>
-  <%= text_field_tag "autonomy" %>
+      <div class="form-group">
+        <%= label_tag "Autonomia", nil, class: "col-sm-2 control-label" %>
+        <div class="col-sm-10">
+          <%= text_field_tag "autonomy", nil, class: "form-control" %>
+        </div>
+      </div>
 
-  <br />
-  <%= label_tag "Valor do combustivel" %>
-  <%= text_field_tag "gas_value" %>
+      <div class="form-group">
+        <%= label_tag "Valor do combustivel", nil, class: "col-sm-2 control-label" %>
+        <div class="col-sm-10">
+          <%= text_field_tag "gas_value", nil, class: "form-control" %>
+        </div>
+      </div>
 
-  <br />
-  <%= submit_tag "Enviar" %>
-<% end %>
+      <br />
+      <%= submit_tag "Enviar", class: "btn btn-default" %>
+    <% end %>
+  </div>
+</div>
