--- a/app/views/roads/index.html.erb
+++ b/app/views/roads/index.html.erb
@@ -1,7 +1,22 @@
 <h1>Escolha seu mapa</h1>
 <br />
-<% @maps.all.each do |map| %>
-  <%= map.name %>
-  <%= link_to("Utilizar", road_path(map), id: map.id) %>
-<% end %>
+
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>Nome</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @maps.all.each do |map| %>
+      <tr>
+        <td><%= map.name %></td>
+        <td><%= link_to("Utilizar", road_path(map), id: map.id, class: "btn btn-default") %></td>
+    <% end %>
+  </tbody>
+</table>
+
+
 
