Fix button name

--- a/app/views/map_locations/_form.html.erb
+++ b/app/views/map_locations/_form.html.erb
@@ -26,7 +26,7 @@
         <%= f.text_area :road_info, :class => "text required form-control" %>
       </div>
       <div class="actions">
-        <%= f.submit  "Salvar", :class => "btn btn-default" %>
+        <%= f.submit  "Criar Mapa", :class => "btn btn-default" %>
       </div>
     <% end %>
   </div>
